--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     // firebase
     implementation platform('com.google.firebase:firebase-bom:28.1.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
 }
