--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   firebase_core: ^1.2.1
   firebase_auth: ^1.4.0
   provider: ^5.0.0
+  google_sign_in: ^5.0.4
+
 
 dev_dependencies:
   flutter_test:
