--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_auth: ^1.4.0
   provider: ^5.0.0
   google_sign_in: ^5.0.4
+  cloud_firestore: ^2.2.2
 
 
 dev_dependencies:
